--- a/ProyectoJ/pagina/index.html
+++ b/ProyectoJ/pagina/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ropa Street style</title>
 </head>
 <body><h1>Ropa Street Style</h1>
     <br>
@@ -15,6 +15,8 @@
     <br>
     <h1>Pantalones</h1>
     <br>
-    <h1>Zapatillas</h1>
+    <h1>Zapatillas</h1> 
+    <br>
+    <div style="background-color: rgb(0, 204, 255);"><h1>Camisetas Overside</h1></div>
 </body>
 </html>
