--- a/ProyectoJ-main/ProyectoJ-main/ProyectoJ/pagina/index.html
+++ b/ProyectoJ-main/ProyectoJ-main/ProyectoJ/pagina/index.html
@@ -11,7 +11,7 @@
     <br>
     <h1>Chaquetas</h1>
     <br>
-    <a href="file:///C:/Users/tecnologia/Desktop/ProyectoJ-main/pagina/chaquetas.html" target="_blank"><img src="chaquetas.jpg" alt=""></a>ta
+    <a href="Chaquetas.html" target="_blank"><img src="chaquetas.jpg" alt="">click aqui para ir a chaquetas</a>
     <br>
     <h1>Pantalones</h1>
     <br>
