--- a/ProyectoJ-main/flexbox/index.html
+++ b/ProyectoJ-main/flexbox/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Flexbox</h1>
+    <main class="container">
+        <section class="box"></section>
+    </main>
 </body>
 </html>
